# sfmath

./: CMakeLists.txt  README.md
include/sfmath/: Core.h  Frustum.cpp  Frustum.hpp  HMat4x4.h  HMat4x4.hpp  Mat4x4.hpp  MatrixUtils.cpp  MatrixUtils.h  MatrixUtils.hpp  Quat.h  Quat.hpp  Quaternion.hpp  Ray.hpp  SMat4x4.h  UDim2.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  sfmath.hpp
src/: HMat4x4.cpp  MatrixUtils.cpp  SMat4x4.cpp  pch.cpp
